<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgSoffy"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/jesus"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtEmial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        app:helperText="Requerido"
        app:layout_constraintTop_toBottomOf="@id/imgSoffy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:hint="@string/ingrese_su_correo_electronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        app:endIconMode="password_toggle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:helperText="Requerido"
        app:layout_constraintTop_toBottomOf="@id/EtEmial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_passwprd"
            android:inputType="textPassword"
            android:hint="@string/ingrese_su_contrase_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/ButtonSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:backgroundTint="@color/botonesLogin"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EtPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/BtnSessionGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="#EFEDED"
        app:cornerRadius="20dp"
        android:text="@string/iniciar_sesion_con_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ButtonSession"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.6"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/TvRegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_estas_registrado"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnSessionGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>
    <Button
        android:id="@+id/btnWindolwReistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_newregister"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/background1"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvRegis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="@color/ColorAzul"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/no"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@mipmap/logo"
        app:layout_constraintEnd_toStartOf="@id/BtnSessionGoogle"
        app:layout_constraintTop_toTopOf="@id/BtnSessionGoogle"
        app:layout_constraintBottom_toBottomOf="@id/BtnSessionGoogle"/>



</androidx.constraintlayout.widget.ConstraintLayout>